Fixed an issue where text overflow would change background color

--- a/waves.css
+++ b/waves.css
@@ -1,11 +1,13 @@
 body, html {
   margin: 0;
   padding: 0;
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   font-family: Arial, sans-serif;
   background-color: hsl(0, 0%, 0%);
+  overflow-x: hidden;
 }
+
 
 h1{
     color: hsl(199, 92%, 61%);
